Emboss missing on some buttons that are aligned in a row #117780

Closed
opened 2024-02-03 11:38:34 +01:00 by Leon Schittek · 2 comments
Member

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: Intel(R) Iris(TM) Graphics 5100 Intel 4.3.0 - Build 20.19.15.4624

Blender Version
Broken: version: 4.1.0 Alpha, branch: main, commit date: 2024-02-03 05:16, hash: 05f94ff8bba01d3280d3a1c667480603351c13aa
Worked: version: 4.1.0 Alpha, branch: main, commit date: 2023-11-09 23:06, hash: 8eb52236631a

Short description of error
When buttons are aligned in a row, some of the inner buttons are not embossed.

Broken Worked
emboss_broken.png emboss_worked.png

Exact steps for others to reproduce the error

  1. Open the default start up.
  2. Switch to a high contrast theme that makes the emboss very visible - like the "Print Friendly" theme
  3. You should observe that the emboss on some of the buttons in the timeline header is missing.
**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: Intel(R) Iris(TM) Graphics 5100 Intel 4.3.0 - Build 20.19.15.4624 **Blender Version** Broken: version: 4.1.0 Alpha, branch: main, commit date: 2024-02-03 05:16, hash: ` 05f94ff8bba01d3280d3a1c667480603351c13aa` Worked: version: 4.1.0 Alpha, branch: main, commit date: 2023-11-09 23:06, hash: `8eb52236631a` **Short description of error** When buttons are aligned in a row, some of the inner buttons are not embossed. |Broken|Worked| |---|---| |![emboss_broken.png](https://projects.blender.org/attachments/c2fef0aa-875e-44b1-af3e-1aada543506b)|![emboss_worked.png](/attachments/b0e50bf7-ccac-421d-9278-b49343465d64)| **Exact steps for others to reproduce the error** 1. Open the default start up. 2. Switch to a high contrast theme that makes the emboss very visible - like the "Print Friendly" theme 4. You should observe that the emboss on some of the buttons in the timeline header is missing.
Leon Schittek added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2024-02-03 11:38:35 +01:00
Author
Member

I think this was caused by #116921

I think this was caused by https://projects.blender.org/blender/blender/pulls/116921
Iliya Katushenock added
Module
User Interface
Status
Confirmed
and removed
Status
Needs Triage
labels 2024-02-03 14:20:27 +01:00
Member

Ewwww....

Oh well, I think I can see a way of keeping that feature and having it work for horizontal layouts. If not I can revert since it really isn't a big deal.

Ewwww.... Oh well, I think I can see a way of keeping that feature and having it work for horizontal layouts. If not I can revert since it really isn't a big deal.
Harley Acheson self-assigned this 2024-02-14 02:45:23 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-02-19 22:26:22 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#117780
No description provided.